
umx 1.1.7
--------------
* Updating minimum R and OpenMx requirement to  >= 3.2.0 and >= 2.5.0
* umx_set_auto_plot to control auto plot
* umx_set_table.format to control table output via knitr

umx 1.1.5
--------------
* Changing from umxReRun to umxModify based on feedback.
* plot() now works on Windows and Unix as well as OS X.
* Update for compatibility with OpenMx 2.5.2

umx 1.1.1
--------------

* Feb 2016 Wooden Christmas-Tree edition
* auto-run now the default for all models!
	* Added option to switch this: options("umx_auto_run" = TRUE)
* plot should generate pdfs for Windows and Unix users now
* umxACEcov support for ACE with covariates
* umx_check_parallel now returns timing information
* umx_time now supports "start" and "stop")
* umxAPA can format more objects in APA style, inc just a p-value)
* summaryAPA can now summarise a data.frame with mean, sd, and correlations
* umxLabel now preserves existing labels in umxRAM models: labels = is now saved
* umx_make_TwinData added to support simulation studies
* Help improvements (wording, seealso etc)
* Removed dependency on formula.tools

umx 1.1.0
--------------

* December 2015 update
* umxRAM can take existing model as input (very useful)
* umxRAM reports model fit and comparison (if old model exists)
* umxPath now lbounds var@0 for v.m.
* umx_residualize  can now take multiple DVs
* umxMI enhanced to cope with more situations
* summary more resilient with missing CIs (#ht Nathan Gillespie!)
* summaryAPA now handles data as well as lm
* Improved help for twin functions
* Various new function features
* vcov() S3 fn added
* umx_print resilient to 0-row input
* summary helpers (e.g. umx_fun_mean_sd)
* Begin support for sex-lim twin models
* New data file for sex-limitation
* Improving consistency in parameter names (minor backward incompatibility)
* Replacing @ with $ accessor begun

umx 1.0.0
--------------

* Full support (create, plot, summary) for CP twin models!